[package]
name = "msgbot"
version = "0.1.0"
authors = ["vi_mi <fenil.jain2018@vitstudent.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.5", default-features=false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
regex = "1.5"
url = "2.2.2"
dotenv = "0.15.0"
# tokio = "1.5.0"
